--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .container {
     padding: 10px 10%;
-   
+
 }
 
 nav {
@@ -37,7 +37,8 @@ nav {
     top: 0;
     z-index: 1;
 }
- nav::before {
+
+nav::before {
     content: '';
     height: 11vh;
     width: 100vw;
@@ -49,7 +50,7 @@ nav {
     left: 0;
 }
 
-.logo img{
+.logo img {
     margin-left: 0;
     width: 120px;
     height: 60px;
@@ -102,7 +103,7 @@ nav ul li a:hover::after {
     opacity: 0;
     animation: slideBottom 1s ease forwards;
     animation-delay: 0.7s;
-    color: #262626;
+    color: #ffffff;
     text-shadow: 1px 1px 2px #ff004f, 1px 1px 4px #ff2167;
 
 }
@@ -134,10 +135,10 @@ nav ul li a:hover::after {
     animation: slideLeft 1s ease forwards;
     animation-delay: 1s;
     color: #ffffff;
+
 }
 
 /* ------------------------about------------------ */
-
 #about {
     padding: 80px 0;
     color: #ababab;
@@ -168,7 +169,7 @@ nav ul li a:hover::after {
 .about-col-2 p {
     font-size: 15px;
     line-height: 1.5;
-    
+
     text-align: justify;
 }
 
@@ -258,7 +259,6 @@ nav ul li a:hover::after {
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 15px;
-
 }
 
 .Services-list div a {
@@ -273,6 +273,7 @@ nav ul li a:hover::after {
     background: #ff004f;
     transform: translateY(-10px);
 }
+
 /* -----------------Portfolio------------------ */
 #portfolio {
     padding: 50px 0;
@@ -503,7 +504,7 @@ nav .fa-solid {
 }
 
 @media only screen and (max-width: 600px) {
-    
+
 
     #header {
         background-image: url(/public/images/phoneviewbanner.jpg);
@@ -576,7 +577,7 @@ nav .fa-solid {
 
     .Sub-Title {
         font-size: 40px;
-        }
+    }
 
     .about-col-1,
     .about-col-2 {
@@ -590,56 +591,70 @@ nav .fa-solid {
     .about-col-2 {
         font-size: 14px;
     }
-    .about-col-2 .Sub-Title{
+
+    .about-col-2 .Sub-Title {
         margin-left: 55px;
     }
-    .about-col-2 p{
+
+    .about-col-2 p {
         margin-top: 30px;
     }
+
     .tab-links {
         font-size: 16px;
         margin-right: 20px;
         margin-left: 20px;
     }
-    .tab-contents{
+
+    .tab-contents {
         margin-left: 20px;
     }
-    .row{
+
+    .row {
         display: flex;
         align-items: center;
         justify-content: center;
     }
-    .service-title{
+
+    .service-title {
         margin-left: 33px;
     }
-    .work-title{
+
+    .work-title {
         margin-left: 58px;
     }
+
     .contact-left,
     .contact-right {
         flex-basis: 100%;
     }
-    .contact-left{
+
+    .contact-left {
         margin-top: -70px;
     }
-    .contact-left .Sub-Title{
+
+    .contact-left .Sub-Title {
         margin-left: 36px;
         margin-top: 35px;
     }
-    .contact-left p{
+
+    .contact-left p {
         margin-left: 36px;
     }
-    .social-icons{
+
+    .social-icons {
         margin-left: 36px;
     }
-    .social-icons a{
-       padding: 5px;
+
+    .social-icons a {
+        padding: 5px;
     }
-      
-   .bttn1{
-    margin-left: 38px;
-   }
-    form .btn2{
+
+    .bttn1 {
+        margin-left: 38px;
+    }
+
+    form .btn2 {
         margin-left: 60px;
     }
     .copyright {
